<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">辉哥</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="model">地图模式</string>
    <string name="normal">普通选择</string>
    <string name="site">卫星选择</string>
    <string name="traffic">交通地图</string>
    <string name="mylocation">我的位置</string>

</resources>
